[workspace]
members = [
    "crates/greentic-oauth-core",
    "crates/greentic-oauth-broker",
    "crates/greentic-oauth-host",
    "crates/greentic-oauth-sdk",
    "examples/axum-app",
    "apps/oauth-testharness",
    "crates/greentic-oauth-client",
]
default-members = ["crates/greentic-oauth-broker"]
resolver = "2"

[workspace.package]
version = "0.4.24"
edition = "2024"
repository = "https://github.com/greentic-ai/greentic-oauth"
homepage = "https://github.com/greentic-ai/greentic-oauth"
documentation = "https://github.com/greentic-ai/greentic-oauth/blob/main/README.md"

[workspace.dependencies]
greentic-oauth-core = { path = "crates/greentic-oauth-core", version = "0.4" }
greentic-oauth-broker = { path = "crates/greentic-oauth-broker", version = "0.4" }
greentic-oauth-host = { path = "crates/greentic-oauth-host", version = "0.4" }
greentic-oauth-sdk = { path = "crates/greentic-oauth-sdk", version = "0.4" }
greentic-telemetry = { version = "0.4" }
greentic-types = { version = "0.4", default-features = false }
greentic-interfaces-host = { path = "vendor/patches/greentic-interfaces-host", version = "0.4.107", default-features = false }
greentic-interfaces-wasmtime = { path = "vendor/patches/greentic-interfaces-wasmtime", version = "0.4.107", default-features = false }
greentic-config = { version = "0.4" }
greentic-config-types = { version = "0.4" }
opentelemetry = { version = "0.31", features = ["metrics", "trace"] }
tracing-opentelemetry = "0.32"
ulid = "1"
aes-gcm = "0.10"
anyhow = "1"
async-nats = "0.46"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "http1", "tokio"] }
base64 = "0.22"
base64ct = "1"
ed25519-dalek = { version = "2", features = ["std"] }
futures-util = "0.3"
hmac = "0.12"
http-body-util = "0.1"
hyper = "1"
jsonschema = "0"
indexmap = "=2.12.1"
once_cell = "1"
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
rand = "0.9"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls", "form", "query"] }
rustls = "0.23"
schemars = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = "2.5.2"
sha2 = "0.10"
subtle = "2.6"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", default-features = false }
tokio-rustls = "0.26"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ureq = { version = "3", features = ["json"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
wasmtime = { version = "41", features = ["component-model"] }
webpki-roots = "1"
clap = { version = "4.5", features = ["derive"] }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
openidconnect = { version = "4.0", default-features = false, features = ["reqwest", "rustls-tls"] }
time = { version = "0.3", features = ["serde"] }
wiremock = "0.6"
insta = { version = "1", features = ["json"] }
dotenvy = "0.15"
dashmap = "6"
http = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9"
serial_test = "3"

[patch.crates-io]
greentic-interfaces = { path = "vendor/patches/greentic-interfaces" }
greentic-interfaces-guest = { path = "vendor/patches/greentic-interfaces-guest" }
greentic-interfaces-host = { path = "vendor/patches/greentic-interfaces-host" }
greentic-interfaces-wasmtime = { path = "vendor/patches/greentic-interfaces-wasmtime" }
