[package]
name = "greentic-oauth-core"
version.workspace = true
edition = "2024"
description = "Shared OAuth types, token helpers, and provider primitives used by the Greentic broker and SDKs."
license = "MIT"
repository = "https://github.com/greenticai/greentic-oauth"
homepage = "https://greentic.ai"
documentation = "https://docs.rs/greentic-oauth-core"

[features]
default = []
schemas = ["schemars"]
dpop = []
par = []
jar = []
mtls = []

[dependencies]
base64 =  { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true, optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
greentic-types = { workspace = true, default-features = false, features = ["std", "time", "serde", "schemars"] }
dashmap = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
openidconnect = { workspace = true }
reqwest = { workspace = true, features = ["json", "blocking"] }
greentic-config-types = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "time"] }
wiremock = { workspace = true }

