[package]
name = "greentic-oauth-sdk"
version.workspace = true
edition = "2024"
description = "Client SDK and WIT host bindings for interacting with the Greentic OAuth broker."
license = "MIT"
repository = "https://github.com/greenticai/greentic-oauth"
homepage = "https://greentic.ai"
documentation = "https://docs.rs/greentic-oauth-sdk"

[features]
default = []

[dependencies]
greentic-oauth-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
greentic-types = { workspace = true, default-features = false, features = ["std", "serde", "time", "schemars"] }
async-trait = { workspace = true }
chrono = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-nats = { workspace = true }
tokio = { workspace = true, features = ["time", "macros", "rt-multi-thread", "net", "sync"] }
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls"] }
greentic-oauth-host = { workspace = true }
jsonwebtoken = { workspace = true }
greentic-types = { workspace = true, default-features = false, features = ["std", "serde", "time", "schemars", "telemetry-autoinit"] }

[dev-dependencies]
uuid = { workspace = true }
anyhow = { workspace = true }

